# CalculatorPractice

./: CMakeLists.txt  readme.md
app/: CMakeLists.txt  main.cpp
libs/add/: CMakeLists.txt
libs/add/include/: add.h
libs/add/src/: add.cpp
libs/add/test/: CMakeLists.txt  add_test.cpp
